# django-aletheia

./: LICENSE  MANIFEST.in  README.md  setup.cfg
aletheia/: admin.py  apps.py  auth_backends.py  forms.py  models.py  settings.py  urls.py  util.py  views.py
aletheia/management/commands/: prepare_existing_users.py
aletheia/static/aletheia/: base64url-arraybuffer.min.js
aletheia/templates/webauthn/: login.html  scripts.html
webauthnauth/: admin.py  apps.py  auth_backends.py  urls.py  views.py
webauthnauth/management/commands/: prepare_existing_users.py
webauthnauth/migrations/: 0001_initial.py
webauthnauth/templates/: scripts.html
webauthnauth/templates/webauthn/: login.html  scripts.html
