[metadata]
name = django-webauthn
version = 0.0.1
author = Julian Mundhahs
author_email = julian.mundhahs@gmail.com
description = Adds support for Authentication via WebAuthN for Django
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Qup42/...
project_urls =
    Bug Tracker = https://github.com/Qup42/.../issues
license = MIT License
classifiers =
    Programming Language :: Python :: 3
#    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = webauthnauth
install_requires =
    django
    django-janus
    webauthn
    python-dateutil