[metadata]
name = django-aletheia
version = 0.0.2
author = Julian Mundhahs
author_email = julian.mundhahs@gmail.com
description = Adds support for Authentication via WebAuthN to Django. Works well with django-janus.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Qup42/django-aletheia
project_urls =
    Bug Tracker = https://github.com/Qup42/django-aletheia/issues
    Source = https://github.com/Qup42/django-aletheia
license = BSD License
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3


[options]
packages = find:
include_package_data = True
install_requires =
    django >= 3.0
    webauthn >= 1.5.0
    python-dateutil >= 2.8.2

[options.packages.find]
include =
    aletheia
    aletheia.*
